fixed nav bar, is now on right in fullscreen. Changed .innerCard content to ul from p although now it is overflowing, needs attention. Changed somebackground photos and added photo credits to README.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="infoContainer">
             <img src="./assets/images/profile pic.jpg" alt="photo of Benjamin">
             <h1>Benjamin Harris</h1>
-            <h3>Web Developer</h3>
+            <h3>Web Development Student</h3>
+            <p class="aboutMe"><span>About Me:</span>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusamus consequatur rem unde saepe ipsa quos, ducimus veritatis repellendus adipisci quasi voluptas expedita numquam eum provident, sunt quisquam blanditiis ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, vero odio? Id nihil corporis asperiores earum velit ipsum quam similique, eligendi repellat minus illum deserunt quod nulla eveniet odio iusto!</p>
             <nav>
                 <ul>
                     <!-- <li><a href="">About Me</a></li> -->
@@ -26,7 +27,6 @@
                     <li><a href="#contact">Contact Information</a></li>
                 </ul>
             </nav>
-            <p class="aboutMe"><span>About Me:</span>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusamus consequatur rem unde saepe ipsa quos, ducimus veritatis repellendus adipisci quasi voluptas expedita numquam eum provident, sunt quisquam blanditiis ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, vero odio? Id nihil corporis asperiores earum velit ipsum quam similique, eligendi repellat minus illum deserunt quod nulla eveniet odio iusto!</p>
         </div>
     </header>
 
@@ -39,9 +39,20 @@
                     <section class="card" id="card1">
                             <a href="#" class="contentLink" id="link1">Project 1</a>
                         <div class="innerCard">
-                            <h6>Programs used:<h6>
+                            <!-- <h6>Programs used:<h6>
                                 <br>
-                                <p>HTML CSS</p>
+                                <p>HTML CSS</p> -->
+                                <ul>
+                                    <li><h6>Programs Used:</h6></li>
+                                    <li>JavaScript</li>
+                                    <li>CSS</li>
+                                    <li>HTML</li>
+                                </ul>
+                                <ul>
+                                    <li><h6>Colaberators:</h6></li>
+                                    <li>Jane Doe</li>
+                                    <li>Jon Doe</li>
+                                </ul>
                         </div>
                     </section>
                 </div>
@@ -59,7 +70,18 @@
                     <section class="card" id="card2">
                             <a href="#" class="contentLink" id="link2">Project 2</a>
                         <div class="innerCard">
-                           <h6>Programs used:<h6><br><p>HTML CSS</p>
+                           <!-- <h6>Programs used:<h6><br><p>HTML CSS</p> -->
+                            <ul>
+                                <li><h6>Programs Used:</h6></li>
+                                <li>JavaScript</li>
+                                <li>CSS</li>
+                                <li>HTML</li>
+                            </ul>
+                            <ul>
+                                <li><h6>Colaberators:</h6></li>
+                                <li>Jane Doe</li>
+                                <li>Jon Doe</li>
+                            </ul>
                         </div>
                     </section>
                 </div>
@@ -76,7 +98,18 @@
                     <section class="card" id="card1">
                             <a href="#" class="contentLink" id="link3">Project 3</a>
                         <div class="innerCard">
-                            <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p>
+                            <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
+                            <ul>
+                                <li><h6>Programs Used:</h6></li>
+                                <li>JavaScript</li>
+                                <li>CSS</li>
+                                <li>HTML</li>
+                            </ul>
+                            <ul>
+                                <li><h6>Colaberators:</h6></li>
+                                <li>Jane Doe</li>
+                                <li>Jon Doe</li>
+                            </ul>
                         </div>
                     </section>
                 </div>
@@ -84,7 +117,10 @@
             </div>
 
         </div>
-
+        <div class="blocker" id="lastBlocker">
+            <h4>About Project 3</h4>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
+        </div>
 
         <footer>
             <ul>
