--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                     <section class="card" id="card1">
                             <a href="#" class="contentLink" id="link1">Project 1</a>
                         <div class="innerCard">
-                            <!-- <h6>Programs used:<h6>
-                                <br>
-                                <p>HTML CSS</p> -->
+
                                 <ul>
                                     <li><h6>Programs Used:</h6></li>
                                     <li>JavaScript</li>
@@ -125,10 +123,10 @@
         <footer>
             <ul>
                 <li id="contact"><strong>Contact Info</strong></li>
-                <li>email:<a href="mailto:harben31@gmail.com"> harben31@gmail.com</a></li>
+                <li>email:<a href="#"> johndoe@gmail.com</a></li>
                 <li>linked in:<a href="#"></a></li>
-                <li>github:<a href="https://github.com/harben31"> harben31</a></li>
-                <li>phone:<a href="tel:5128150281" id="phone"> (512) 815-0281</a></li>
+                <li>github:<a href="#"> johndoe</a></li>
+                <li>phone:<a href="#" id="phone"> (555) 555-5555</a></li>
             </ul>
         </footer>
         
