Fixed responce for screens as small as 320px. Resized the last two pictures so the first one is biggest. Fixed nav bar height issues.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <nav>
                 <ul>
                     <!-- <li><a href="">About Me</a></li> -->
-                    <li><a href="#link1">Project 1</a></li>
-                    <li><a href="#link2">Project 2</a></li>
-                    <li><a href="#link3">Project 3</a></li>
+                    <li class="navSm"><a href="#link1">Project 1</a></li>
+                    <li class="navSm"><a href="#link2">Project 2</a></li>
+                    <li class="navSm" ><a href="#link3">Project 3</a></li>
                     <li><a href="#contact">Contact Information</a></li>
                 </ul>
             </nav>
@@ -40,13 +40,13 @@
                             <a href="#" class="contentLink" id="link1">Project 1</a>
                         <div class="innerCard">
 
-                                <ul>
+                                <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
                                     <li>JavaScript</li>
                                     <li>CSS</li>
                                     <li>HTML</li>
                                 </ul>
-                                <ul>
+                                <ul class="cardInfo cardInfoNames">
                                     <li><h6>Colaberators:</h6></li>
                                     <li>Jane Doe</li>
                                     <li>Jon Doe</li>
@@ -62,56 +62,55 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eveniet ab repellat, itaque ducimus esse cum, fuga impedit dolor repellendus iusto nisi, voluptate pariatur dicta optio nihil necessitatibus iure nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae incidunt accusamus tempore dignissimos vero dolorem commodi iusto laboriosam officia, tempora sunt sequi blanditiis qui error nobis cupiditate nesciunt quasi.</p>
             </div>
 
-            <div class="mainBack2 back">
-
-                <div class="cardHorizon cardEven">
-                    <section class="card" id="card2">
-                            <a href="#" class="contentLink" id="link2">Project 2</a>
-                        <div class="innerCard">
-                           <!-- <h6>Programs used:<h6><br><p>HTML CSS</p> -->
-                            <ul>
-                                <li><h6>Programs Used:</h6></li>
-                                <li>JavaScript</li>
-                                <li>CSS</li>
-                                <li>HTML</li>
-                            </ul>
-                            <ul>
-                                <li><h6>Colaberators:</h6></li>
-                                <li>Jane Doe</li>
-                                <li>Jon Doe</li>
-                            </ul>
-                        </div>
-                    </section>
-                </div>
-
+            <div class="mainContainer">
+                <div class="mainBack2 back backSm">
+                    <div class="cardHorizon cardEven">
+                        <section class="card" id="card2">
+                                <a href="#" class="contentLink" id="link2">Project 2</a>
+                            <div class="innerCard">
+                                <ul class="cardInfo cardInfoPrgm">
+                                    <li><h6>Programs Used:</h6></li>
+                                    <li>JavaScript</li>
+                                    <li>CSS</li>
+                                    <li>HTML</li>
+                                </ul>
+                                <ul class="cardInfo cardInfoNames">
+                                    <li><h6>Colaberators:</h6></li>
+                                    <li>Jane Doe</li>
+                                    <li>Jon Doe</li>
+                                </ul>
+                            </div>
+                        </section>
+                    </div>
+                </div>     
             </div>
 
             <div class="blocker">
                 <h4>About Project 2</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
             </div>
-            
-            <div class="mainBack3 back">
-                <div class="cardHorizon  cardOdd">
-                    <section class="card" id="card1">
-                            <a href="#" class="contentLink" id="link3">Project 3</a>
-                        <div class="innerCard">
-                            <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
-                            <ul>
-                                <li><h6>Programs Used:</h6></li>
-                                <li>JavaScript</li>
-                                <li>CSS</li>
-                                <li>HTML</li>
-                            </ul>
-                            <ul>
-                                <li><h6>Colaberators:</h6></li>
-                                <li>Jane Doe</li>
-                                <li>Jon Doe</li>
-                            </ul>
-                        </div>
-                    </section>
+            <div class="mainContainer">
+                <div class="mainBack3 back backSm">
+                    <div class="cardHorizon  cardOdd">
+                        <section class="card" id="card1">
+                                <a href="#" class="contentLink" id="link3">Project 3</a>
+                            <div class="innerCard">
+                                <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
+                                <ul class="cardInfo cardInfoPrgm">
+                                    <li><h6>Programs Used:</h6></li>
+                                    <li>JavaScript</li>
+                                    <li>CSS</li>
+                                    <li>HTML</li>
+                                </ul>
+                                <ul class="cardInfo cardInfoNames">
+                                    <li><h6>Colaberators:</h6></li>
+                                    <li>Jane Doe</li>
+                                    <li>Jon Doe</li>
+                                </ul>
+                            </div>
+                        </section>
+                    </div>
                 </div>
-                
             </div>
 
         </div>
@@ -124,7 +123,7 @@
             <ul>
                 <li id="contact"><strong>Contact Info</strong></li>
                 <li>email:<a href="#"> johndoe@gmail.com</a></li>
-                <li>linked in:<a href="#"></a></li>
+                <li>linked in:<a href="#">abraham linkedin</a></li>
                 <li>github:<a href="#"> johndoe</a></li>
                 <li>phone:<a href="#" id="phone"> (555) 555-5555</a></li>
             </ul>
