added more detail to read me; added source for the css reset used. Fixed the white line above footer.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
     <main>
         <div class="backGroundContainer">
 
-            <div class="mainBack1 back">
+            <article class="mainBack1 back">
 
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
                             <a href="#" class="contentLink" id="link1">Project 1</a>
-                        <div class="innerCard">
-
+                        <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
                                     <li>JavaScript</li>
@@ -51,23 +50,26 @@
                                     <li>Jane Doe</li>
                                     <li>Jon Doe</li>
                                 </ul>
-                        </div>
+                            </figure>
                     </section>
                 </div>
 
-            </div>
+            </article>
 
-            <div class="blocker">
+            <aside class="blocker">
                 <h4>About Project 1:</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eveniet ab repellat, itaque ducimus esse cum, fuga impedit dolor repellendus iusto nisi, voluptate pariatur dicta optio nihil necessitatibus iure nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae incidunt accusamus tempore dignissimos vero dolorem commodi iusto laboriosam officia, tempora sunt sequi blanditiis qui error nobis cupiditate nesciunt quasi.</p>
-            </div>
+            </aside>
 
+
+            <!-- mainContainer allow a background behind the smaller pictures -->
+            <!-- remove div.mainContainer after photos are resized -->
             <div class="mainContainer">
-                <div class="mainBack2 back backSm">
+                <article class="mainBack2 back backSm">
                     <div class="cardHorizon cardEven">
                         <section class="card" id="card2">
                                 <a href="#" class="contentLink" id="link2">Project 2</a>
-                            <div class="innerCard">
+                            <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
                                     <li>JavaScript</li>
@@ -79,22 +81,23 @@
                                     <li>Jane Doe</li>
                                     <li>Jon Doe</li>
                                 </ul>
-                            </div>
+                            </figure>
                         </section>
                     </div>
-                </div>     
+                </article>     
             </div>
 
-            <div class="blocker">
+            <aside class="blocker">
                 <h4>About Project 2</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
-            </div>
+            </aside>
+            <!-- remove div.mainContainer after photos are resized -->
             <div class="mainContainer">
-                <div class="mainBack3 back backSm">
+                <article class="mainBack3 back backSm">
                     <div class="cardHorizon  cardOdd">
                         <section class="card" id="card1">
                                 <a href="#" class="contentLink" id="link3">Project 3</a>
-                            <div class="innerCard">
+                            <figure class="innerCard">
                                 <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
@@ -107,17 +110,18 @@
                                     <li>Jane Doe</li>
                                     <li>Jon Doe</li>
                                 </ul>
-                            </div>
+                            </figure>
                         </section>
                     </div>
-                </div>
+                </article>
             </div>
 
         </div>
-        <div class="blocker" id="lastBlocker">
+
+        <aside class="blocker" id="lastBlocker">
             <h4>About Project 3</h4>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
-        </div>
+        </aside>
 
         <footer>
             <ul>
