added link to page to project 1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="#" class="contentLink" id="link1">Project 1</a>
+                            <a href="https://harben31.github.io/bbh_homework_wk_2/" class="contentLink" id="link1">Project 1</a>
                         <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
