plugged in project 1 ond homeworks. All links are live. Double check b4 turning in.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
             <img src="./assets/images/profile pic.jpg" alt="photo of Benjamin">
             <h1>Benjamin Harris</h1>
             <h3>Web Development Student</h3>
-            <p class="aboutMe"><span>About Me:</span>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusamus consequatur rem unde saepe ipsa quos, ducimus veritatis repellendus adipisci quasi voluptas expedita numquam eum provident, sunt quisquam blanditiis ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, vero odio? Id nihil corporis asperiores earum velit ipsum quam similique, eligendi repellat minus illum deserunt quod nulla eveniet odio iusto!</p>
+            <p class="aboutMe"><span>About Me:</span>  I am hospitality professional who is shifting careers amidst the COVID-19 pandemic. I am learning several coding languages including javaScript, node.js, CSS, HTML and others. Creativity is something I look for in a job and I have found that web development is a great outlet for it. </p>
             <nav>
                 <ul>
                     <!-- <li><a href="">About Me</a></li> -->
-                    <li class="navSm"><a href="#link1">Project 1</a></li>
-                    <li class="navSm"><a href="#link2">Project 2</a></li>
-                    <li class="navSm" ><a href="#link3">Project 3</a></li>
-                    <li><a href="#contact">Contact Information</a></li>
+                    <li class="navSm"><a href="#p1">What Song is That</a></li>
+                    <li class="navSm"><a href="#p2">Weather Dashboard</a></li>
+                    <li class="navSm" ><a href="#p3">Work Day Calender</a></li>
+                    <li class="navSm"><a href="#contact">Contact Information</a></li>
+                    <li class="navSm navFix"><a href="https://docs.google.com/document/d/1H3igMY9w6F4SXfPzIbImioAOocl7BbmlYT_Uheec0Yo/edit?usp=sharing" target="blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,11 +34,10 @@
     <main>
         <div class="backGroundContainer">
 
-            <article class="mainBack1 back">
-
+            <article class="mainBack1 back" id="p1">
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="https://harben31.github.io/bbh_homework_wk_2/" class="contentLink" id="link1">Project 1</a>
+                            <a href="https://harben31.github.io/project_1/" class="contentLink" id="link1" target="blank">What Song is That <i> &nbsp the app</i></a>
                         <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
@@ -47,89 +47,85 @@
                                 </ul>
                                 <ul class="cardInfo cardInfoNames">
                                     <li><h6>Colaberators:</h6></li>
-                                    <li>Jane Doe</li>
-                                    <li>Jon Doe</li>
+                                    <li>Asia Alnahi</li>
+                                    <li>Cassandra Cunningham</li>
+                                    <li>Erin Blaize</li>
                                 </ul>
                             </figure>
                     </section>
                 </div>
-
             </article>
 
             <aside class="blocker">
-                <h4>About Project 1:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eveniet ab repellat, itaque ducimus esse cum, fuga impedit dolor repellendus iusto nisi, voluptate pariatur dicta optio nihil necessitatibus iure nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae incidunt accusamus tempore dignissimos vero dolorem commodi iusto laboriosam officia, tempora sunt sequi blanditiis qui error nobis cupiditate nesciunt quasi.</p>
+                <h4>About What Song is That <i>the app</i> </h4>
+                <p>This application incorporates the Spotify and MusixMatch APIs. The user can input lyrics into the search and they if the song is in the MusixMatch database they will be returned several cards with the artist, song and a link to listen on Spotify. As this is an entirely client side app oAuth2's implicit grant flow is used to get permissions from the user's Spotify account. </p>
+                <a id="ghLink1" class="ghRepoLinks" href="https://github.com/harben31/Whats-That-Song-the-app" target="blank">Githup Repo</a>
             </aside>
 
-
-            <!-- mainContainer allow a background behind the smaller pictures -->
-            <!-- remove div.mainContainer after photos are resized -->
-            <div class="mainContainer">
-                <article class="mainBack2 back backSm">
-                    <div class="cardHorizon cardEven">
-                        <section class="card" id="card2">
-                                <a href="#" class="contentLink" id="link2">Project 2</a>
-                            <figure class="innerCard">
-                                <ul class="cardInfo cardInfoPrgm">
-                                    <li><h6>Programs Used:</h6></li>
-                                    <li>JavaScript</li>
-                                    <li>CSS</li>
-                                    <li>HTML</li>
-                                </ul>
-                                <ul class="cardInfo cardInfoNames">
-                                    <li><h6>Colaberators:</h6></li>
-                                    <li>Jane Doe</li>
-                                    <li>Jon Doe</li>
-                                </ul>
-                            </figure>
-                        </section>
-                    </div>
-                </article>     
-            </div>
+            <article class="mainBack2 back backSm" id="p2">
+                <div class="cardHorizon cardEven">
+                    <section class="card" id="card2">
+                            <a href="https://harben31.github.io/bbh_homework_wk_6/" class="contentLink" id="link2" target="blank">Weather Dashboard</a>
+                        <figure class="innerCard">
+                            <ul class="cardInfo cardInfoPrgm">
+                                <li><h6>Programs Used:</h6></li>
+                                <li>JavaScript</li>
+                                <li>CSS</li>
+                                <li>HTML</li>
+                            </ul>
+                            <!-- <ul class="cardInfo cardInfoNames">
+                                <li><h6>Colaberators:</h6></li>
+                                <li>Jane Doe</li>
+                                <li>Jon Doe</li>
+                            </ul> -->
+                        </figure>
+                    </section>
+                </div>
+            </article>     
 
             <aside class="blocker">
-                <h4>About Project 2</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
+                <h4>About Weather Dashboard</h4>
+                <p>The function of this app is to tell the user the weather in a given city. When the user searches the name of a city they are returned with the current weather as well as a five day forecast. Previous searches are stored in localStorage and rendered under the search bar for the user to click and revisit that city’s data. At the heart of the application is the Open Weather API. </p>
+                <a  id="ghLink2" class="ghRepoLinks" href="https://github.com/harben31/Weather-Dashboard" target="blank">Githup Repo</a>
             </aside>
-            <!-- remove div.mainContainer after photos are resized -->
-            <div class="mainContainer">
-                <article class="mainBack3 back backSm">
-                    <div class="cardHorizon  cardOdd">
-                        <section class="card" id="card1">
-                                <a href="#" class="contentLink" id="link3">Project 3</a>
-                            <figure class="innerCard">
-                                <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
-                                <ul class="cardInfo cardInfoPrgm">
-                                    <li><h6>Programs Used:</h6></li>
-                                    <li>JavaScript</li>
-                                    <li>CSS</li>
-                                    <li>HTML</li>
-                                </ul>
-                                <ul class="cardInfo cardInfoNames">
-                                    <li><h6>Colaberators:</h6></li>
-                                    <li>Jane Doe</li>
-                                    <li>Jon Doe</li>
-                                </ul>
-                            </figure>
-                        </section>
-                    </div>
-                </article>
-            </div>
-
+     
+            <article class="mainBack3 back backSm" id="p3">
+                <div class="cardHorizon  cardOdd">
+                    <section class="card" id="card1">
+                            <a href="https://harben31.github.io/bbh_homework_wk_5/" class="contentLink" id="link3" target="blank">Work Day Calander</a>
+                        <figure class="innerCard">
+                            <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
+                            <ul class="cardInfo cardInfoPrgm">
+                                <li><h6>Programs Used:</h6></li>
+                                <li>JavaScript</li>
+                                <li>Moment.js</li>
+                                <li>CSS</li>
+                                <li>HTML</li>
+                            </ul>
+                            <!-- <ul class="cardInfo cardInfoNames">
+                                <li><h6>Colaberators:</h6></li>
+                                <li>Jane Doe</li>
+                                <li>Jon Doe</li>
+                            </ul> -->
+                        </figure>
+                    </section>
+                </div>
+            </article>
         </div>
 
         <aside class="blocker" id="lastBlocker">
-            <h4>About Project 3</h4>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur repudiandae, nihil similique odit qui? Dolor, non quidem, nam sunt, quasi facilis magnam porro sed omnis molestias fugit. Cum, quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum nemo vitae quo, dolorem dolor in quaerat omnis quos nesciunt voluptatum temporibus doloremque sapiente molestias animi ea, praesentium odit consectetur?</p>
+            <h4>About Workday Calender</h4>
+            <p> Users can input meetings, deadlines or other data onto the hour block. The blocks are color coded gray for past hours, red for current hour and green for future hours. The data can be saved into localStorage if the user clicks the save button on the right side of the hour black and will be retrieved until the users clicks the clear schedule button.</p>
+            <a id="ghLink3" class="ghRepoLinks" href="https://github.com/harben31/Work-Day-Calender" target="blank">Githup Repo</a>
         </aside>
 
         <footer>
             <ul>
                 <li id="contact"><strong>Contact Info</strong></li>
-                <li>email:<a href="#"> johndoe@gmail.com</a></li>
-                <li>linked in:<a href="#">abraham linkedin</a></li>
-                <li>github:<a href="#"> johndoe</a></li>
-                <li>phone:<a href="#" id="phone"> (555) 555-5555</a></li>
+                <li>email:<a href="mailto:harben31@gmail.com"> harben31@gmail.com</a></li>
+                <li>linked in:<a href="https://www.linkedin.com/in/benjamin-harris-81281a2b/" target="blank">benjamin-harris-81281a2b</a></li>
+                <li>github:<a href="https://github.com/harben31/" target="blank"> harben31</a></li>
+                <li>phone:<a href="tel:5128150281" id="phone"> (512) 815-0281</a></li>
             </ul>
         </footer>
         
