--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="navSm"><a href="#p2">Weather Dashboard</a></li>
                     <li class="navSm" ><a href="#p3">Work Day Calender</a></li>
                     <li class="navSm"><a href="#contact">Contact Information</a></li>
-                    <li class="navSm navFix"><a href="https://docs.google.com/document/d/1H3igMY9w6F4SXfPzIbImioAOocl7BbmlYT_Uheec0Yo/edit?usp=sharing" target="blank">Resume</a></li>
+                    <li class="navSm navFix"><a href="https://drive.google.com/file/d/1G4GBE9pvErDyvYcXAmeyyxnyZAioABcq/view?usp=sharing" target="blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,7 +37,7 @@
             <article class="mainBack1 back" id="p1">
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="https://harben31.github.io/project_1/" class="contentLink" id="link1" target="blank">What Song is That <i> &nbsp the app</i></a>
+                            <a href="https://harben31.github.io/Whats-Song-is-That-the-app/" class="contentLink" id="link1" target="blank">What Song is That <i> &nbsp the app</i></a>
                         <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
                                     <li><h6>Programs Used:</h6></li>
@@ -65,7 +65,7 @@
             <article class="mainBack2 back backSm" id="p2">
                 <div class="cardHorizon cardEven">
                     <section class="card" id="card2">
-                            <a href="https://harben31.github.io/bbh_homework_wk_6/" class="contentLink" id="link2" target="blank">Weather Dashboard</a>
+                            <a href="https://harben31.github.io/Weather-Dashboard/" class="contentLink" id="link2" target="blank">Weather Dashboard</a>
                         <figure class="innerCard">
                             <ul class="cardInfo cardInfoPrgm">
                                 <li><h6>Programs Used:</h6></li>
@@ -92,7 +92,7 @@
             <article class="mainBack3 back backSm" id="p3">
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="https://harben31.github.io/bbh_homework_wk_5/" class="contentLink" id="link3" target="blank">Work Day Calander</a>
+                            <a href="https://harben31.github.io/Work-Day-Calender/" class="contentLink" id="link3" target="blank">Work Day Calander</a>
                         <figure class="innerCard">
                             <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
                             <ul class="cardInfo cardInfoPrgm">
